--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1000,6 +1000,7 @@
  STATE_998:0 "Monaco"
  STATE_999:0 "San Marino"
  STATE_1000:0 "Liechtenstein"
+ STATE_1001:0 "Leonine City"
 
  YODONG_STATE:0 "Yodong"
  SEOGANDO_STATE:0 "Seogando"
