--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1513,6 +1513,9 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  VIN_popular_mystic_army:0 "Popular Mystic Army"
  VIN_popular_mystic_army_desc:0 "The armed forces following the principles of the Tao Đài, a new principle encouraged by Emperor Phan Xích Long invoking the divine superiority of the Vietnamese people and their manifest destiny."
 
+ VIN_insufficient_budget:0 "Insufficient Budget"
+ VIN_insufficient_budget_desc:0 "The metropolis refused a large loan requested by the governor general [IND.getLeader]."
+
  VIN_french_military_supplies:0 "[Root.Overlord.getAdjective] Military Supplies"
  VIN_french_military_supplies_desc:0 "[Root.Overlord.getName] delivers weapons and equipment to us according to our requests, granting us a small part of their European production."
 
