--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -489,7 +489,7 @@
  VICTORY_POINTS_5022:0 "Austin"
  VICTORY_POINTS_10740:0 "El Paso"
  VICTORY_POINTS_9920:0 "Fort Worth"
- VICTORY_POINTS_3834:0 "Tuscon"
+ VICTORY_POINTS_3834:0 "Tucson"
  VICTORY_POINTS_6699:0 "Stockton"
  VICTORY_POINTS_10422:0 "Reno"
  VICTORY_POINTS_10582:0 "Ogden"
