VP and microstate stuff

--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -14,6 +14,8 @@
  VICTORY_POINTS_3171:0 "Fredrikstad"
  VICTORY_POINTS_3546:0 "Verdun"
  VICTORY_POINTS_743:0 "Bayonne"
+ VICTORY_POINTS_9853:0 "Perpignan"
+ VICTORY_POINTS_6960:0 "Béziers"
  VICTORY_POINTS_11160:0"Kristianstad"
  VICTORY_POINTS_9209:0 "Örebro"
  VICTORY_POINTS_9523:0 "Versailles"
