--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -182,7 +182,7 @@
  STATE_181:0 "Guarda"
  STATE_182:0 "Kriti"
  STATE_183:0 "Cyprus"
- STATE_184:0 "Kavalawe"
+ STATE_184:0 "Kavala"
  STATE_185:0 "Thessalia"
  STATE_186:0 "Peloponnisos"
  STATE_187:0 "Kerkyra"
@@ -339,7 +339,7 @@
  STATE_338:0 "Gloucestershire"
  STATE_339:0 "Izmir"
  STATE_340:0 "Denizli"
- STATE_341:0 "Tekfurdağı"
+ STATE_341:0 "Tekfurdagı"
  STATE_342:0 "Menteşe"
  STATE_343:0 "Köln"
  STATE_344:0 "Adana"
