--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4851,8 +4851,9 @@
  TUR_one_language_one_religion_one_nation1:0 "Modify the state's modification to §YSeparatist Sentiments§! by\nStability: §R-0.10%§!\nWar Support: §R-0.10%§!\n\n"
  TUR_one_language_one_religion_one_nation2:0 "Modify the state's modification to §YSeparatist Sentiments§! by\nStability: §R-0.10%§!\n\n"
  TUR_displace_christians_from_economy_tt:0 "Modify £ww1_game_rule_flag_GRE  §YGreek Minority§! by\nLocal Factories: §G+5%§!\nLocal Construction Speed: §R-2%§!\n\n"
- TUR_confiscate_christian_properties_tt:0 "§YMinority decisions§! will be reduced in §Ytime§! and §Ycost§!, and get additional §Ywar support§! upon completion.\nUnlock several §YMinority decisions§!."
- TUR_displace_christians_from_economy_tt2:0 "Unlocks decisions to §YDeport Greeks§!."
+ TUR_displace_christians_from_economy_tt2:0 "Modify £ww1_game_rule_flag_GRE  §YGreek Minority§! by\nLocal Factories: §G+3%§!\nLocal Construction Speed: §R-1%§!\n\n"
+ TUR_greek_deportations_tt:0 "Unlocks decisions to §YDeport Greeks§!.\nThese decisions will allow us to reduce the effects of £ww1_game_rule_flag_GRE  §YGreek Minority§!, aiming to §Ytotally getting rid of it§! selected enough times."
+ TUR_confiscate_christian_properties_tt:0 "§YMinority decisions§! will be reduced in §Ytime§! and §Ycost§!, and get additional §Ywar support§! upon completion.§!."
 
  TUR_legacy_of_the_4th_lancers:0 "Legacy of the 4th Lancers"
  TUR_legacy_of_the_4th_lancers_desc:0 "It was the soldiers from the 4th lancers who cried the name of the sultan. Though it was quickly crushed, it's legacy is still renown among sultan and chaliph supporters."
@@ -5646,7 +5647,6 @@
  TUR_erase_bulgarian_identity_tt2:0 "Local Population: [?TUR_erase_bulgarian_identity_state_population|R0]"
  TUR_greek_deportations:0 "Greek Deportations"
  TUR_greek_deportations_desc:0 "As proven by the annexation of Crete, Greeks living under our empire cannot be preceived as loyal subjects. They need to be boycotted and replaced by Muslim Turks in the region. We'll make our empire unliveable for them. First we'll strip away their rights and privilages, and second we'll eradicate them."
- TUR_greek_deportations_tt:0 "Local Population: [?TUR_greek_deportations_state_population|R0]"
  TUR_deport_greeks_from_anatolia:0 "Deport Greeks from Anatolia"
  TUR_deport_greeks_from_anatolia_desc:0 "While many Turkic migrations resulted in Anatolia turning into a Turkic homeland, many Greeks in the region still consider here as their heritage. We can't fully recognize Anatolia as Turkish while it's infiltrated by Greeks do we? Anatolia has to be fully Turkified."
  TUR_deport_greeks_from_anatolia_tt2:0 "Local Population: [?TUR_deport_greeks_from_anatolia_state_population|R0]"
