Microstates improvements, portraits from RoN

--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1649,9 +1649,9 @@
  BEL_benelux_cosmetic_tag_communism_ADJ:0 "Benelux"
  PER_pahlavi_neutrality_DEF:0 "the Imperial State of Persia"
  PER_khorasan:0 "Autonomous Khorasan"
- PER_khorasan_DEF:0 "the Autonomous Government of Khorasan"
- PER_khorasan_communism:0 "Soviet Khorasan"
- PER_khorasan_communism_DEF:0 "the Autonomous Soviet of Khorasan"
+ PER_khoraSMR_DEF:0 "the Autonomous Government of Khorasan"
+ PER_khoraSMR_communism:0 "Soviet Khorasan"
+ PER_khoraSMR_communism_DEF:0 "the Autonomous Soviet of Khorasan"
  ROM_legionary_fascism:0 "Iron Guard Romania"
  ROM_legionary_fascism_DEF:0 "the Kingdom of Romania"
  ALB_principality_neutrality:0 "Principality of Albania"
