--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -1163,7 +1163,7 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  ww1_france.261.a:0 "Karak is under our rule, now"
  ww1_france.261.b:0 "Bon débarras!"
  ww1_france.261.c:0 "French Imperialism at his highest..."
- san_remo_conference:0 "San Remo Conference Application"
+ SMR_remo_conference:0 "San Remo Conference Application"
 
  ww1_france.262.t:0 "Picardie Manoeuvers Completed"
  ww1_france.262.d:0 "The simulated invasion of France led by the Blue Army, that of General Meunier, was organized near Amiens and headed towards Paris where the Red Army of General Picquart was defending itself. These operations made it possible to highlight the slowness of the airships which proved too restrictive to the vagaries of the weather. On the other hand, aerial reconnaissance showed itself to be more flexible and discreet."
