--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -1888,7 +1888,7 @@
  GER_way_to_rhodesia:0 "Way to Rhodesia"
  GER_way_through_rhodesia:0 "Path through Rhodesia"
  GER_way_through_rhodesia_desc:0 ""
- GER_partisan_warfare:0 "Partisan Warfare"
+ GER_partiSMR_warfare:0 "Partisan Warfare"
  GER_colonial_docks:0 "Colonial Docks"
  GER_befriend_switzerland:0 "Befriend Switzerland"
  GER_ensure_neutrality_of_romania:0 "Ensure Neutrality of Romania"
@@ -3740,8 +3740,8 @@
  ITA_defend_our_ports_desc:0 "Not only are our ports our greatest asset, they also are the only way for enemies to effectively get past the Alps and Mont-Banc Group. We should put ressources into expanding the defences of said ports in the case of an invasion."
  ITA_MAS_of_livorno:0 "MAS of Livorno"
  ITA_MAS_of_livorno_desc:0 "By investing in more submarine works companies we can increase the effectiveness of submarine warfare."
- ITA_san_marcos_battalion:0 "San Marcos Battalion"
- ITA_san_marcos_battalion_desc:0 "Marines are a vital instrument in any naval invasion. We need to expand our army-naval cooperation to create an optimal Marine corps."
+ ITA_SMR_marcos_battalion:0 "San Marcos Battalion"
+ ITA_SMR_marcos_battalion_desc:0 "Marines are a vital instrument in any naval invasion. We need to expand our army-naval cooperation to create an optimal Marine corps."
  ITA_expand_regia_marina:0 "Expand Regia Marina"
  ITA_expand_regia_marina_desc:0 "Born in 1861 and having fought in the Seven Years War, the Regia Marina bears the imperative task of protecting Italian interests and carrying out wars across the seven seas. As winds of change are blowing across Europe, we must undertake reforms to ensure that the Regia Marina is capable of its task, and possibly even more."
  ITA_cacciatorpedinieri_tactics:0 "Cacciatorpedinieri Tatics"
@@ -7286,7 +7286,7 @@ FRA_ww1_seine_citroen_shell_production_desc:0 "The Citröen company is able to c
  FRA_ww1_the_world_is_saved:0 "The World is Saved"
  FRA_ww1_decision_on_losers:0 "Decisions on the Losers"
  FRA_ww1_continental_affairs:0 "Continental Affairs"
- FRA_ww1_san_remo_oil_agreement:0 "San Remo Oil Agreement"
+ FRA_ww1_SMR_remo_oil_agreement:0 "San Remo Oil Agreement"
  FRA_ww1_support_yugoslavia:0 "Support [SER.GetName]"
  FRA_ww1_support_romania:0 "Support [ROM.GetName]"
  FRA_ww1_protect_czechoslovakia:0 "Support [CZE.GetName]"
@@ -7431,8 +7431,8 @@ FRA_ww1_seine_citroen_shell_production_desc:0 "The Citröen company is able to c
  NFA_war_veteran_desc:0 "After the war, many soldiers returned home. Let's shout that our country needs them again for her."
  NFA_colonial_conscription:0 "Colonial Conscription"
  NFA_colonial_conscription_desc:0 "During the last war, most of our younger generation fell on the plains of Flanders. We need more soldiers, whether French or not, to save our country."
- NFA_partisan_suppression:0 "Partisan Suppression"
- NFA_partisan_suppression_desc:0 "Some of us are red! They are trying to break us down from within. All traitors must be confirmed and eliminated."
+ NFA_partiSMR_suppression:0 "Partisan Suppression"
+ NFA_partiSMR_suppression_desc:0 "Some of us are red! They are trying to break us down from within. All traitors must be confirmed and eliminated."
  NFA_above_all_the_losses:0 "Above All the Losses"
  NFA_above_all_the_losses_desc:0 "The civil war is over. For now."
  NFA_restoration_of_the_continental_system:0 "Restoration of the Continental System"
