--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -195,7 +195,7 @@
  GRE_neutrality:0 "Kingdom of Greece"
  GRE_neutrality_DEF:0 "the Kingdom of Greece"
  GRE_communism:0 "Hellenic Socialist Republic"
- GRE_communism_DEF:0 "The Hellenic Socialist Republic"
+ GRE_communism_DEF:0 "the Hellenic Socialist Republic"
  GRE_fascism_ADJ:0 "Hellenic"
  GRE:0 "Greece"
  GRE_DEF:0 "Greece"
@@ -1949,8 +1949,8 @@
  GAM_democratic_ADJ:0 "Gambian"
  GAM_neutrality_ADJ:0 "Gambian"
  GAM_communism_ADJ:0 "Gambian"
- GAM:0 "The Gambia"
- GAM_DEF:0 "The Gambia"
+ GAM:0 "the Gambia"
+ GAM_DEF:0 "the Gambia"
  GAM_ADJ:0 "Gambian"
  WLS_fascism:0 "Cambria"
  WLS_fascism_DEF:0 "Cambria"
@@ -1967,8 +1967,8 @@
  WLS:0 "Wales"
  WLS_DEF:0 "Wales"
  WLS_ADJ:0 "Welsh"
- NGR_fascism:1 "The Niger Ascendancy"
- NGR_fascism_DEF:1 "The Niger Ascendancy"
+ NGR_fascism:1 "Niger Ascendancy"
+ NGR_fascism_DEF:1 "the Niger Ascendancy"
  NGR_democratic:1 "Republic of the Niger"
  NGR_democratic_DEF:1 "the Republic of the Niger"
  NGR_neutrality:0 "Niger"
@@ -2457,7 +2457,7 @@
  OST_fascism_DEF:0 "the East Asian State"
  OST_fascism_ADJ:0 "Ostasian"
  GAL_fascism:0 "Governorate of Galicia"
- GAL_fascism_DEF:0 "The Governorate of Galicia"
+ GAL_fascism_DEF:0 "the Governorate of Galicia"
  GAL_democratic:0 "Galicia"
  GAL_democratic_DEF:0 "Galicia"
  GAL_neutrality:0 "Galicia and Lodomeria"
@@ -2746,7 +2746,7 @@
  FIU_communism:0 "Socialist State of Fiume"
  FIU_communism_DEF:0 "the Socialist State of Fiume"
 
- RIF:0 "The Rif"
+ RIF:0 "the Rif"
  RIF_DEF:0 "the Rif"
  RIF_ADJ:0 "Riffan"
  RIF_fascism:0 "Empire of Tamazgha"
@@ -3137,53 +3137,53 @@
  IKR_communism:0 "Free State of Ikaria"
  IKR_communism_DEF:0 "the Free State of Ikaria"
 
-SAN:0 "San Marino"
-SAN_DEF:0 "San Marino"
-SAN_ADJ:0 "Sanmarineese"
-SAN_neutrality:0 "Empire Of San Marino"
-SAN_neutrality_DEF:0 "The Holy Roman Empire Of San Marino, Italia, And The Lands Of Marino San The 1st"
-SAN_democratic:0 "Republic Of San Marino"
-SAN_democratic_DEF:0 "The Republic Of San Marino"
-SAN_fascism:0 "Sanmarineese State"
-SAN_fascism_DEF:0 "The Sanmarineese State"
-SAN_communism:0 "People's Republic Of San Marino"
-SAN_communism_DEF:0 "The People's Republic Of San Marino"
+ SMR:0 "San Marino"
+ SMR_DEF:0 "San Marino"
+ SMR_ADJ:0 "Sanmarineese"
+ SMR_neutrality:0 "Republic of San Marino"
+ SMR_neutrality_DEF:0 "the Republic of San Marino"
+ SMR_democratic:0 "Republic of San Marino"
+ SMR_democratic_DEF:0 "the Republic of San Marino"
+ SMR_fascism:0 "Sanmarineese State"
+ SMR_fascism_DEF:0 "the Sanmarineese State"
+ SMR_communism:0 "People's Republic of San Marino"
+ SMR_communism_DEF:0 "the People's Republic of San Marino"
 
-ANN:0 "Andorra"
-ANN_DEF:0 "Andorra"
-ANN_ADJ:0 "Andorran"
-ANN_neutrality:0 "Principality Of Andorra"
-ANN_neutrality_DEF:0 "The Principality Of Andorra"
-ANN_democratic:0 "Republic Of Andorra"
-ANN_democratic_DEF:0 "The Republic Of Andorra"
-ANN_fascism:0 "Andorran State"
-ANN_fascism_DEF:0 "The Andorran State"
-ANN_communism:0 "People's Republic Of Andorra"
-ANN_communism_DEF:0 "The People's Republic Of Andorra"
+ ADR:0 "Andorra"
+ ADR_DEF:0 "Andorra"
+ ADR_ADJ:0 "Andorran"
+ ADR_neutrality:0 "Principality of Andorra"
+ ADR_neutrality_DEF:0 "the Principality of Andorra"
+ ADR_democratic:0 "Republic of Andorra"
+ ADR_democratic_DEF:0 "the Republic of Andorra"
+ ADR_fascism:0 "Andorran State"
+ ADR_fascism_DEF:0 "the Andorran State"
+ ADR_communism:0 "People's Republic of Andorra"
+ ADR_communism_DEF:0 "the People's Republic of Andorra"
 
-LIE:0 "Liechtenstein"
-LIE_DEF:0 "Liechtenstein"
-LIE_ADJ:0 "Liechtensteiner"
-LIE_neutrality:0 "Principality Of Liechtenstein"
-LIE_neutrality_DEF:0 "The Principality Of Liechtenstein"
-LIE_democratic:0 "Republic Of Liechtenstein"
-LIE_democratic_DEF:0 "The Republic Of Liechtenstein"
-LIE_fascism:0 "Liechtensteiner State"
-LIE_fascism_DEF:0 "The Liechtensteiner State"
-LIE_communism:0 "People's Republic Of Liechtenstein"
-LIE_communism_DEF:0 "The People's Republic Of Liechtenstein"
+ LIE:0 "Liechtenstein"
+ LIE_DEF:0 "Liechtenstein"
+ LIE_ADJ:0 "Liechtensteiner"
+ LIE_neutrality:0 "Principality of Liechtenstein"
+ LIE_neutrality_DEF:0 "the Principality of Liechtenstein"
+ LIE_democratic:0 "Principality of Liechtenstein"
+ LIE_democratic_DEF:0 "the Principality of Liechtenstein"
+ LIE_fascism:0 "Liechtensteiner State"
+ LIE_fascism_DEF:0 "the Liechtensteiner State"
+ LIE_communism:0 "People's Republic of Liechtenstein"
+ LIE_communism_DEF:0 "the People's Republic of Liechtenstein"
 
-MOO:0 "Monaco"
-MOO_DEF:0 "Monaco"
-MOO_ADJ:0 "Monégasque"
-MOO_neutrality:0 "Principality Of Monaco"
-MOO_neutrality_DEF:0 "The Principality Of Monaco"
-MOO_democratic:0 "Republic Of Monaco"
-MOO_democratic_DEF:0 "The Republic Of Monaco"
-MOO_fascism:0 "Monegasque State"
-MOO_fascism_DEF:0 "The Monegasque State"
-MOO_communism:0 "People's Republic Of Monaco"
-MOO_communism_DEF:0 "The People's Republic Of Monaco"
+ MCO:0 "Monaco"
+ MCO_DEF:0 "Monaco"
+ MCO_ADJ:0 "Monégasque"
+ MCO_neutrality:0 "Principality of Monaco"
+ MCO_neutrality_DEF:0 "the Principality of Monaco"
+ MCO_democratic:0 "Republic of Monaco"
+ MCO_democratic_DEF:0 "the Republic of Monaco"
+ MCO_fascism:0 "Monegasque State"
+ MCO_fascism_DEF:0 "the Monegasque State"
+ MCO_communism:0 "People's Republic of Monaco"
+ MCO_communism_DEF:0 "the People's Republic of Monaco"
  
  BAD:0 "Baden"
  BAD_DEF:0 "Baden"
