--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1869,6 +1869,17 @@
  ALS_neutrality_party:0 "Landesausschuss"
  ALS_communism_party:0 "Soldaten- und Arbeiterräte" 
 
- MOO_neutrality_party:0 "House Of Grimaldi"
+ MCO_neutrality_party:0 "House Of Grimaldi"
+ MCO_democratic_party:0 "Monégasque Committee"
+ 
  LIE_neutrality_party:0 "House Of Liechtenstein"
- ANN_neutrality_party:0 "Coprincipality"
+ LIE_democratic_party:0 "CSVP"
+ LIE_democratic_party_long:0 "Christlich-Soziale Volkspartei"
+ 
+ ADR_neutrality_party:0 "Consell General d'Andorra"
+ ADR_democratic_party:0 "Consell General d'Andorra"
+ 
+ SMR_neutrality_party:0 "Consiglio Grande e Generale"
+ SMR_democratic_party:0 "Consiglio Grande e Generale"
+ SMR_communism_party:0 "PSS"
+ SMR_communism_party_long:0 "Partito Socialista Sammarinese"
