--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -3154,8 +3154,8 @@
  ADR_ADJ:0 "Andorran"
  ADR_neutrality:0 "Principality of Andorra"
  ADR_neutrality_DEF:0 "the Principality of Andorra"
- ADR_democratic:0 "Republic of Andorra"
- ADR_democratic_DEF:0 "the Republic of Andorra"
+ ADR_democratic:0 "Andorra"
+ ADR_democratic_DEF:0 "the Principality of Andorra"
  ADR_fascism:0 "Andorran State"
  ADR_fascism_DEF:0 "the Andorran State"
  ADR_communism:0 "People's Republic of Andorra"
