--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1348,10 +1348,10 @@
  MXC_democratic:0 "Constitutional Army"
  MXC_democratic_DEF:0 "Mexican Constitutional Army"
  MEX_third_federal_republic_neutrality_def:0 "the United Mexican States"
- MCO_democratic:0 "Conventionists"
- MCO_democratic_DEF:0 "Mexican Conventionist Army"
- MCO_communism:0 "Conventionists"
- MCO_communism_DEF:0 "Mexican Conventionist Army"
+ MCA_democratic:0 "Conventionists"
+ MCA_democratic_DEF:0 "Mexican Conventionist Army"
+ MCA_communism:0 "Conventionists"
+ MCA_communism_DEF:0 "Mexican Conventionist Army"
  ZAP:0 "South Mexico"
  ZAP_DEF:0 "South Mexico"
  ZAP_ADJ:0 "South Mexican"
