--- a/localisation/english/replace/replace_victory_points_l_english.yml
+++ b/localisation/english/replace/replace_victory_points_l_english.yml
@@ -155,3 +155,5 @@
  VICTORY_POINTS_3583:0 "Troppau"
  VICTORY_POINTS_317:0 "Schleswig"
  VICTORY_POINTS_587:0 "Düsseldorf"
+ VICTORY_POINTS_11435:0 "Trier"
+ VICTORY_POINTS_10412:0 "Lynchburg"
