Monte Carlo Casino idea

--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2958,10 +2958,10 @@ we_are_number_one_Naval_treaty_nation:0 "We are the most powerful navy of all ad
 FRA_anti_french_resistance:0 "Anti-French Resistance"
 FRA_colonial_conscription:0 "Colonial Conscription"
 
-MOR_sharifian_governement:0 "Sharifian Governement"
-MOR_sharifian_governement_desc:0 "Morocco has total autonomy over the management of its education, its elite, its religions and its culture. This preservation of traditions, while being protected by France, creates an acceptable compromise within the most urban populations."
+ MOR_sharifian_governement:0 "Sharifian Governement"
+ MOR_sharifian_governement_desc:0 "Morocco has total autonomy over the management of its education, its elite, its religions and its culture. This preservation of traditions, while being protected by France, creates an acceptable compromise within the most urban populations."
 
-MOR_guerilla_warfare:0 "Guerrila Warfare"
+ MOR_guerilla_warfare:0 "Guerrila Warfare"
 
  #Malaysia
  MAL_federation:0 "Federated States"
@@ -2973,3 +2973,7 @@ MOR_guerilla_warfare:0 "Guerrila Warfare"
  BRN_disgrace:0 "National Disgrace"
  BRN_disgrace_desc:0 "What was initially a call for a westerner to help put down a local rebellion has now led to white rule over much of the former territories. The world is too dangerous. We should just stand still to keep this small piece of land safe under the rule of [ROOT.GetRulingParty]..."
  SRW_rangers:0 "Sarawak Rangers"
+ 
+ #Monaco
+ MCO_monte_carlo_casino:0 "Monte Carlo Casino"
+ MCO_monte_carlo_casino_desc:0 "The Casino de Monte-Carlo is owned and operated by the Société des bains de mer de Monaco, a public company in which the Monaco government and the ruling royal family have a majority interest. The company also owns the principal hotels, sports clubs, foodservice establishments, and nightclubs throughout the Principality. However, citizens of Monaco are forbidden from entering the gaming rooms of the casino."
