Andorra and San Marino ideas

--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2979,3 +2979,11 @@ FRA_colonial_conscription:0 "Colonial Conscription"
  #Monaco
  MCO_monte_carlo_casino:0 "Monte Carlo Casino"
  MCO_monte_carlo_casino_desc:0 "The Casino de Monte-Carlo is owned and operated by the Société des bains de mer de Monaco, a public company in which the Monaco government and the ruling royal family have a majority interest. The company also owns the principal hotels, sports clubs, foodservice establishments, and nightclubs throughout the Principality. However, citizens of Monaco are forbidden from entering the gaming rooms of the casino."
+
+ #San Marino
+ SMR_roman_republic:0 "Republican Tradition"
+ SMR_roman_republic_desc:0 "The Constitution of San Marino, based on the Statutes of 1600, establishes a parliamentary government headed by two Captain Regent in the tradition of the ancient Roman Republic."
+
+ #Andorra
+ ADR_co_prince:0 "Coregency"
+ ADR_co_prince_desc:0 "Founded in 1278 by a treaty between the Bishop of Urgell and the Count of Foix, the unique diarchy has remained in place since the Middle Ages. Andorra is jointly reign by the French Head of State and the Bishop of Urgell. This remained the case while France's heads of state alternated between King, Emperor and President, except for a brief period when Andorra was annexed to France by Napoleon I."
