--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1864,10 +1864,10 @@
  ALS_neutrality_party:0 "Landesausschuss"
  ALS_communism_party:0 "Soldaten- und Arbeiterräte" 
 
- MCO_neutrality_party:0 "House Of Grimaldi"
+ MCO_neutrality_party:0 "House of Grimaldi"
  MCO_democratic_party:0 "Monégasque Committee"
  
- LIE_neutrality_party:0 "House Of Liechtenstein"
+ LIE_neutrality_party:0 "House of Liechtenstein"
  LIE_democratic_party:0 "CSVP"
  LIE_democratic_party_long:0 "Christlich-Soziale Volkspartei"
  
