--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -3580,8 +3580,9 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ww1_turkey.37.a:0 "We'll discuss the issue on the peace conference later."
  ww1_turkey.38.t:0 "Turks Ask for Antalya"
  ww1_turkey.38.d:0 "The National Movement has invited us for the return of their occupied lands. We might consider to give them what they want since our allies already gave most of our promised lands in Anatolia to the Greeks."
- ww1_turkey.38.a:0 "Our allies stabbed us in the back anyways"
- ww1_turkey.38.b:0 "Give up on yet another land? no thank you."
+ ww1_turkey.38.a:0 "Our allies stabbed us in the back anyways."
+ ww1_turkey.38.b:0 "Give up on yet another land? No thank you."
+ ww1_turkey.38.c:0 "Except for the Dodecanese then..."
  ww1_turkey.39.t:0 "The Italians Cedes our Territories"
  ww1_turkey.39.d:0 "The Italians accepted to cede territories which is under their occupation"
  ww1_turkey.39.a:0 "One less thing to worry about in the peace conference."
