--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4114,7 +4114,7 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.71.b:0 "We have longed for this war!"
  ottoman.73.t:0 "Local Development in State"
  ottoman.73.d:0 "As a part of our decentralist economy model, this vilayet has also taken matters into its own hands. Through its own local planning, the state will aim to develop."
- ottoman.73.a.0 "A faster way to be developed."
+ ottoman.73.a:0 "A faster way to be developed."
 
  ottoman.72.t:0 "Russia Agrees"
  ottoman.72.d:0 "Seems like the Russians also agree with our statement, they agreed to hand us Kars, Artvin and Batumi."
