--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -927,18 +927,18 @@
  TUR_islamic_army_tt:0 "When at war with a §YMajor Power§!: \nWeekly Manpower: §G+150§! \nAttack against major countries: §G+15.0%§! \nDefense against major countries: §G+15.0%§ \n"
  TUR_ottoman_staff:0 "Ottoman Staff"
  TUR_german_military_command:0 "German Military Command"
- TUR_armenian_minority:0 "£ww1_flag_ARM  Armenian Minority"
- TUR_arab_minority:0 "£ww1_flag_ARB  Arab Minority"
- TUR_greek_minority:0 "£ww1_game_rule_flag_GRE  Greek Minority"
- TUR_south_slav_minority:0 "£ww1_game_rule_flag_YUG  South Slavic Minority"
- TUR_albanian_minority:0 "£ww1_flag_ALB  Albanian Minority"
- TUR_kurdish_minority:0 "£ww1_flag_KUR  Kurdish Minority"
- TUR_georgian_minority:0 "£ww1_flag_GEO  Georgian Minority"
- TUR_romanian_minority:0 "£ww1_flag_ROM  Romanian Minority"
- TUR_assyrian_minority:0 "£ww1_flag_ASY  Assyrian Minority"
- TUR_turkish_minority:0 "£ww1_flag_TUR  Turkish Minority"
+ TUR_armenian_minority:0 "£ww1_flag_ARM  §YArmenian Minority§!"
+ TUR_arab_minority:0 "£ww1_flag_ARB  §YArab Minority§!"
+ TUR_greek_minority:0 "£ww1_game_rule_flag_GRE  §YGreek Minority§!"
+ TUR_south_slav_minority:0 "£ww1_game_rule_flag_YUG  §YSouth Slavic Minority§!"
+ TUR_albanian_minority:0 "£ww1_flag_ALB  §YAlbanian Minority§!"
+ TUR_kurdish_minority:0 "£ww1_flag_KUR  §YKurdish Minority§!"
+ TUR_georgian_minority:0 "£ww1_flag_GEO  §YGeorgian Minority§!"
+ TUR_romanian_minority:0 "£ww1_flag_ROM  §YRomanian Minority§!"
+ TUR_assyrian_minority:0 "£ww1_flag_ASY  §YAssyrian Minority§!"
+ TUR_turkish_minority:0 "£ww1_flag_TUR  §YTurkish Minority§!"
  TUR_azerbaijani_cooperation:0 "£ww1_flag_AZR  Azerbaijani Cooperation"
- TUR_minority_revolt_tt:0 "If §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n\n"
+ TUR_minority_revolt_tt:0 "If §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n"
  TUR_minority_supply_tt:0 "[TUR_minority_supply_tt]"
  TUR_gendarmerie:0 "Ottoman Gendarmerie"
  TUR_gendarmerie_improved:0 "Ottoman Gendarmerie"
