German Naval Tree Skelly

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10490,3 +10490,51 @@ GER_secular_campaigns:0 "Secular Campaigns"
 GER_secular_campaigns_desc:0 ""
 GER_the_german_mark:0 "The German Mark"
 GER_the_german_mark_desc:0 ""
+GER_the_matter_of_the_navy:0 "The Matter of the Navy"
+GER_the_matter_of_the_navy_desc:0 ""
+GER_flirt_with_britain:0 "Flirt with Britain"
+GER_flirt_with_britain_desc:0 ""
+GER_a_grand_navy:0 "A Grand Navy"
+GER_a_grand_navy_desc:0 ""
+GER_the_influence_of_sea_power:0 "The Influence of Sea Power"
+GER_the_influence_of_sea_power_desc:0 ""
+GER_common_interests:0 "Common Interests"
+GER_common_interests_desc:0 ""
+GER_aftermath_of_the_haldane_mission:0 "Aftermath of the Haldane Mission"
+GER_aftermath_of_the_haldane_mission_desc:0 ""
+GER_german_pride:0 "German Pride"
+GER_german_pride_desc:0 ""
+GER_u_nineteen:0 "U-19"
+GER_u_nineteen_desc:0 ""
+GER_the_fleet_in_being:0 "The Fleet in Being"
+GER_the_fleet_in_being_desc:0 ""
+GER_a_smarter_navy:0 "A Smarter Navy"
+GER_a_smarter_navy_desc:0 ""
+GER_propose_immediate_rustungswende:0 "Propose Immediate Rustungswende"
+GER_propose_immediate_rustungswende_desc:0 ""
+GER_krupp_contracts:0 "Krupp Contracts"
+GER_krupp_contracts_desc:0 ""
+GER_expansion_of_shipyards:0 "Expansion of Shipyards"
+GER_expansion_of_shipyards_desc:0 ""
+GER_utilise_the_navy_league:0 "Utilise the Navy League"
+GER_utilise_the_navy_league_desc:0 ""
+GER_full_steam_ahead:0 "Full Steam Ahead"
+GER_full_steam_ahead_desc:0 ""
+GER_equip_anti_air:0 "Equip Anti-Air"
+GER_equip_anti_air_desc:0 ""
+GER_vulcan_contracts:0 "Vulcan Contracts"
+GER_vulcan_contracts_desc:0 ""
+GER_demand_angola:0 "Demand Angola"
+GER_demand_angola_desc:0 ""
+GER_sell_ships_to_russia:0 "Sell Ships to Russia"
+GER_sell_ships_to_russia_desc:0 ""
+GER_bigger_guns:0 "Bigger Guns"
+GER_bigger_guns_desc:0 ""
+GER_zepplin_reconnaissance:0 "Zepplin Reconnaissance"
+GER_zepplin_reconnaissance_desc:0 ""
+GER_invest_into_naval_bombers:0 "Invest into Naval Bombers"
+GER_invest_into_naval_bombers_desc:0 ""
+GER_tirpitz_grand_fleet:0 "Tirpitz's Grand Fleet"
+GER_tirpitz_grand_fleet_desc:0 ""
+GER_v_thirty_production:0 "V-30 Production"
+GER_v_thirty_production_desc:0 ""
