--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1001,6 +1001,7 @@
  STATE_999:0 "San Marino"
  STATE_1000:0 "Liechtenstein"
  STATE_1001:0 "Leonine City"
+ STATE_1002:0 "Delaware"
 
  YODONG_STATE:0 "Yodong"
  SEOGANDO_STATE:0 "Seogando"
