--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5912,7 +5912,7 @@
  TUR_hurriyet_musavat_uhuvvet:0 "Hürriyet, Müsavat, Uhuvvet!"
  TUR_hurriyet_musavat_uhuvvet_desc:0 "Freedom, Equality and Fraternity! The sultan lost most of it's pover and we purged most of the reactionaries. There's nothing holding us back to achieve an European style state."
  TUR_dissolve_the_OPDA:0 "Dissolve the OPDA"
- TUR_dissolve_the_OPDA_desc:0 "This is the end of the debt slavery. Long live nationalization, comrades!"
+ TUR_dissolve_the_OPDA_desc:0 "This is the end of debt slavery. Long live nationalization, comrades!"
  TUR_dissolve_chamber_of_deputies:0 "Dissolve the Chamber of Deputies"
  TUR_dissolve_chamber_of_deputies_desc:0 "İttihat ve Terakki and other modernist parties did nothing but to destroy our values. We must purge so there'll be no opposition left in front of our grand ambitions."
  TUR_purge_the_officers:0 "Purge of the Officers"
@@ -7288,9 +7288,12 @@ FRA_ww1_seine_citroen_shell_production_desc:0 "The Citröen company is able to c
  FRA_ww1_continental_affairs:0 "Continental Affairs"
  FRA_ww1_san_remo_oil_agreement:0 "San Remo Oil Agreement"
  FRA_ww1_support_yugoslavia:0 "Support [SER.GetName]"
+ FRA_ww1_support_yugoslavia_desc:0 "The Serbs were given generous amounts of land with the defeat of the Central Powers, yet these gains will never be recognised by Bulgarians and Magyrs. 
  FRA_ww1_support_romania:0 "Support [ROM.GetName]"
  FRA_ww1_protect_czechoslovakia:0 "Support [CZE.GetName]"
+ FRA_ww1_protect_czechoslovakia_desc0 "The young Czechoslovak state, much like its neighbours, is fragile. They would make for a suitable counterweight to future German revanchism. Its imperative we grant them our protection."
  FRA_ww1_little_entente:0 "Little Entente"
+ FRA_ww1_little_entente_desc:0 "Attempts by the Hungarians to either restore the Habsburgs, or any moves to retake lands lost to their neighbours would surely cause a war. A military pact between Prague, Bucharest and Belgrade is the only way to prevent this.
  FRA_ww1_rhineland_fate:0 "Withdraw from Rhineland?"
  FRA_interwar_ruhr_occupation:0 "Ruhr Occupation"
  FRA_interwar_ruhr_occupation_desc:0 "Without British support and the insidious complicity of the Weimar government, we are forced to take steps to obtain the reparations we are entitled to receive. By occupying the highly industrialized area of the Ruhr, we will gain control of a large part of Germany's production capacities."
@@ -8342,7 +8345,7 @@ FRA_init_in_deep_reforms_desc:0 "The French army must remain an organized struct
  BRA_jungle_battalions:0 "Jungle Battalions"
  BRA_jungle_battalions_desc:0 ""
  BRA_lessons_of_contestado_war:0 "Lessons of Contestado War"
- BRA_lessons_of_contestado_war_desc:0 "We must use our experience in the Contesatdp War for our advantage."
+ BRA_lessons_of_contestado_war_desc:0 "We must use our experience in the Contesatado War for our advantage."
  BRA_first_military_aviator:0 "First Military Aviator"
  BRA_first_military_aviator_desc:0 "Ricardo Kirk was the first Brazilian Army officer to learn how to pilot airplanes. He graduated from École d´Aviation d´Étampes on 22 October 1912. When he returned to Brazil, he was one of the founders of the Brazilian Airclub, where he was assigned as technical director."
  BRA_santos_dumonts_inventions:0 "Santos-Dumont's Inventions"
