--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -7291,7 +7291,7 @@ FRA_ww1_seine_citroen_shell_production_desc:0 "The Citröen company is able to c
  FRA_ww1_support_yugoslavia_desc:0 "The Serbs were given generous amounts of land with the defeat of the Central Powers, yet these gains will never be recognised by Bulgarians and Magyrs. 
  FRA_ww1_support_romania:0 "Support [ROM.GetName]"
  FRA_ww1_protect_czechoslovakia:0 "Support [CZE.GetName]"
- FRA_ww1_protect_czechoslovakia_desc0 "The young Czechoslovak state, much like its neighbours, is fragile. They would make for a suitable counterweight to future German revanchism. Its imperative we grant them our protection."
+ FRA_ww1_protect_czechoslovakia_desc:0 "The young Czechoslovak state, much like its neighbours, is fragile. They would make for a suitable counterweight to future German revanchism. Its imperative we grant them our protection."
  FRA_ww1_little_entente:0 "Little Entente"
  FRA_ww1_little_entente_desc:0 "Attempts by the Hungarians to either restore the Habsburgs, or any moves to retake lands lost to their neighbours would surely cause a war. A military pact between Prague, Bucharest and Belgrade is the only way to prevent this.
  FRA_ww1_rhineland_fate:0 "Withdraw from Rhineland?"
