--- a/localisation/english/ww1_victory_points_l_english.yml
+++ b/localisation/english/ww1_victory_points_l_english.yml
@@ -573,6 +573,7 @@
  VICTORY_POINTS_6190:0 "Vaduz"
  VICTORY_POINTS_3164:0 "Civitas Leonina"
  VICTORY_POINTS_9786:0 "Wilmington"
+ VICTORY_POINTS_10586:0 "Paducah"
 
  PETROGRAD_PROV:0 "Petrograd"
  LENINGRAD_PROV:0 "Leningrad"
