--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2039,7 +2039,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_add_armenian_minority_2:0 "Add £ww1_flag_ARM  §YArmenian Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n£defence_texticon  Division Defense: §R-10.0%§!\n£enemy_supply_texticon  Enemy Local Supplies: §R+10%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.20%§!\nWar Support: §G+0.10%§!\n"
  TUR_add_armenian_minority_3:0 "Add £ww1_flag_ARM  §YArmenian Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n£defence_texticon  Division Defense: §R-15.0%§!\n£enemy_supply_texticon  Enemy Local Supplies: §R+15%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.20%§!\nWar Support: §G+0.10%§!\n"
  TUR_add_armenian_minority_4:0 "Add £ww1_flag_ARM  §YArmenian Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n£defence_texticon  Division Defense: §R-20.0%§!\n£enemy_supply_texticon  Enemy Local Supplies: §R+20%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.20%§!\nWar Support: §G+0.10%§!\n"
- TUR_add_south_slav_minority_gumulcine:0 "Remove £ww1_game_rule_flag_GRE  §YGreek Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n£manpower_texticon  Recruitable Population: §R-5.00%§!\n£civ_factory  Local Factories: §R-3%§!\n£operatives_build_intel_network_texticon  Intel to Enemies: §R-5%§!\n£garrison_texticon  Required Garrisons: §R-2%§!\n£political_violence_loss_texticon  Resistance Decay Speed: §R-5%§!\n£construction_speed_texticon  Local Construction Speed: §G+1%§!\nAdd £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n£manpower_texticon  Recruitable Population: §R-2.50%§!\n£garrison_texticon  Required Garrisons: §R-2%§!\n£political_violence_loss_texticon  Resistance Decay Speed: §R-5%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.10%§!\n"
+ TUR_add_greek_minority:0 "Add £ww1_game_rule_flag_GRE  §YGreek Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n[TUR_minority_local_factories_down][TUR_minority_intel_to_enemies_down][TUR_minority_recruitable_population_down][TUR_minority_local_construction_speed_down]\nModify the state's modification to §YSeparatist Sentiments§! by\n[TUR_minority_stability_down]War Support: §G+0.10%§!\n"
+ TUR_add_south_slav_minority_gumulcine:0 "Add £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n£manpower_texticon  Recruitable Population: §R-2.50%§!\n£garrison_texticon  Required Garrisons: §R-2%§!\n£political_violence_loss_texticon  Resistance Decay Speed: §R-5%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.10%§!\n"
  TUR_add_south_slav_minority_1:0 "Add £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n£manpower_texticon  Recruitable Population: §R-5.00%§!\n£garrison_texticon  Required Garrisons: §R-5%§!\n£political_violence_loss_texticon  Resistance Decay Speed: §R-10%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.20%§!\nWar Support: §G+0.10%§!\n"
  TUR_add_south_slav_minority_2:0 "Add £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n£manpower_texticon  Recruitable Population: §R-10.00%§!\n£garrison_texticon  Required Garrisons: §R-10%§!\n£political_violence_loss_texticon  Resistance Decay Speed: §R-20%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.20%§!\nWar Support: §G+0.10%§!\n"
  TUR_add_south_slav_minority_3:0 "Add £ww1_game_rule_flag_YUG  §YSouth Slavic Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n£manpower_texticon  Recruitable Population: §R-15.00%§!\n£garrison_texticon  Required Garrisons: §R-15%§!\n£political_violence_loss_texticon  Resistance Decay Speed: §R-30%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.20%§!\nWar Support: §G+0.10%§!\n"
@@ -2048,8 +2049,48 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_add_albanian_minority_2:0 "Add £ww1_flag_ALB §YAlbanian Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n£political_violence_gain_texticon  Resistance Growth Speed: §R+20%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.20%§!\nWar Support: §G+0.10%§!\n"
  TUR_add_albanian_minority_3:0 "Add £ww1_flag_ALB §YAlbanian Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n£political_violence_gain_texticon  Resistance Growth Speed: §R+30%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.20%§!\nWar Support: §G+0.10%§!\n"
  TUR_add_albanian_minority_4:0 "Add £ww1_flag_ALB §YAlbanian Minority§! which grants:\nIf §YResistance Strength§! reaches §R80%§!, the state will §RRevolt§!\n£political_violence_gain_texticon  Resistance Growth Speed: §R+40%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.20%§!\nWar Support: §G+0.10%§!\n"
- TUR_greek_minority_level_down_gumulcine:0 "Modify [TUR_get_state_minority] by\nLocal Factories: §G+3%§!\nIntel to Enemies: §G-5%§!\nRecruitable Population: §G+2.50%§!\nLocal Construction Speed: §R-1%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.10%§!\nWar Support: §G+0.05%§!\n"
- TUR_greek_minority_level_down_1:0 "Modify [TUR_get_state_minority] by\nLocal Factories: §G+2%§!\nIntel to Enemies: §G-10%§!\nRecruitable Population: §G+5.00%§!\nLocal Construction Speed: §R-2%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.20%§!\nWar Support: §G+0.10%§!\n"
+ TUR_greek_minority_level_down_gumulcine:0 "Modify [TUR_get_state_minority] by\nLocal Factories: §G+3%§!\nIntel to Enemies: §G-5%§!\nRecruitable Population: §G+2.50%§!\nLocal Construction Speed: §R-1%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.10%§!\n"
+ TUR_greek_minority_level_down1:0 "Modify [TUR_get_state_minority] by\n"
+ TUR_greek_minority_level_down2:0 "\nModify the state's modification to §YSeparatist Sentiments§! by\n"
+
+ TUR_minority_local_factories_down:0 "[TUR_minority_local_factories_down]"
+ TUR_minority_local_factories_normal:0 "£civ_factory  Local Factories: §G+5%§!\n"
+ TUR_minority_local_factories_4:0 "£civ_factory  Local Factories: §G+4%§!\n"
+ TUR_minority_local_factories_3:0 "£civ_factory  Local Factories: §G+3%§!\n"
+ TUR_minority_local_factories_2:0 "£civ_factory  Local Factories: §G+2%§!\n"
+ TUR_minority_local_factories_1:0 "£civ_factory  Local Factories: §G+1%§!\n"
+ TUR_minority_intel_to_enemies_down:0 "[TUR_minority_intel_to_enemies_down]"
+ TUR_minority_intel_to_enemies_normal:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-10%§!\n"
+ TUR_minority_intel_to_enemies_9:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-9%§!\n"
+ TUR_minority_intel_to_enemies_8:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-8%§!\n"
+ TUR_minority_intel_to_enemies_7:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-7%§!\n"
+ TUR_minority_intel_to_enemies_6:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-6%§!\n"
+ TUR_minority_intel_to_enemies_5:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-5%§!\n"
+ TUR_minority_intel_to_enemies_4:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-4%§!\n"
+ TUR_minority_intel_to_enemies_3:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-3%§!\n"
+ TUR_minority_intel_to_enemies_2:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-2%§!\n"
+ TUR_minority_intel_to_enemies_1:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-1%§!\n"
+ TUR_minority_recruitable_population_down:0 "[TUR_minority_recruitable_population_down]"
+ TUR_minority_recruitable_population_normal:0 "£manpower_texticon  Recruitable Population: §G+5.00%§!\n"
+ TUR_minority_recruitable_population_4_5:0 "£manpower_texticon  Recruitable Population: §G+4.50%§!\n"
+ TUR_minority_recruitable_population_4:0 "£manpower_texticon  Recruitable Population: §G+4.00%§!\n"
+ TUR_minority_recruitable_population_3_5:0 "£manpower_texticon  Recruitable Population: §G+3.50%§!\n"
+ TUR_minority_recruitable_population_3:0 "£manpower_texticon  Recruitable Population: §G+3.00%§!\n"
+ TUR_minority_recruitable_population_2_5:0 "£manpower_texticon  Recruitable Population: §G+2.50%§!\n"
+ TUR_minority_recruitable_population_2:0 "£manpower_texticon  Recruitable Population: §G+2.00%§!\n"
+ TUR_minority_recruitable_population_1_5:0 "£manpower_texticon  Recruitable Population: §G+1.50%§!\n"
+ TUR_minority_recruitable_population_1:0 "£manpower_texticon  Recruitable Population: §G+1.00%§!\n"
+ TUR_minority_recruitable_population_0_5:0 "£manpower_texticon  Recruitable Population: §G+0.50%§!\n"
+ TUR_minority_local_construction_speed_down:0 "[TUR_minority_local_construction_speed_down]"
+ TUR_minority_local_construction_speed_normal:0 "£construction_speed_texticon  Local Construction Speed: §R-2%§!\n"
+ TUR_minority_local_construction_speed_1:0 "£construction_speed_texticon  Local Construction Speed: §R-1%§!\n"
+ TUR_minority_stability_down:0 "[TUR_minority_stability_down]"
+ TUR_minority_stability_normal:0 "£stability_texticon  Stability: §G+0.20%§!\n"
+ TUR_minority_stability_1:0 "£stability_texticon  Stability: §G+0.10%§!\n"
+ TUR_minority_war_support_down:0 "£war_support_modifiericons_texticonWar Support: §G+0.10%§!\n"
+
+ TUR_south_slav_minority_level_down_gumulcine:0 "Modify [TUR_get_state_minority] by\n£political_violence_loss_texticon  Resistance Decay Speed: §G+5%§!\n£garrison_texticon  Required Garrisons: §G+2%§!\n£manpower_texticon  Recruitable Population: §G+2.50%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.10%§!\n"
+ TUR_south_slav_minority_level_down_1:0 "Modify [TUR_get_state_minority] by\n£manpower_texticon  Recruitable Population: §R-5.00%§!\n£garrison_texticon  Required Garrisons: §R-5%§!\n£political_violence_loss_texticon  Resistance Decay Speed: §R-10%§!\n\nModify the state's modification to §YSeparatist Sentiments§! by\nStability: §G+0.20%§!\nWar Support: §G+0.10%§!\n"
 
  TUR_decision_cost_minority:0 "[TUR.turkeyminoritycost]"
  TUR_decision_cost_minority_blocked:0 "[TUR.turkeyminoritycostblocked]"
