--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -2543,7 +2543,7 @@
  VNC:0 "Venice"
  VNC_ADJ:0 "Venetian"
  VNC_DEF:0 "Venice"
- PAP_neutrality:0 "Papal States"
+ PAP_neutrality:0 "State of the Church"
  PAP_neutrality_DEF:0 "the State of the Church"
  PAP_neutrality_ADJ:0 "Papal"
  PAP_democratic:0 "Roman Republic"
