LIECHTENSTEIN Ideas and Event - Update

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -3168,8 +3168,8 @@
  LIE_neutrality_DEF:0 "the Principality of Liechtenstein"
  LIE_democratic:0 "Principality of Liechtenstein"
  LIE_democratic_DEF:0 "the Principality of Liechtenstein"
- LIE_fascism:0 "Liechtensteiner State"
- LIE_fascism_DEF:0 "the Liechtensteiner State"
+ LIE_fascism:0 "Holy Roman Empire Successor State"
+ LIE_fascism_DEF:0 "the Holy Roman Empire Successor State"
  LIE_communism:0 "People's Republic of Liechtenstein"
  LIE_communism_DEF:0 "the People's Republic of Liechtenstein"
 
