--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -3924,6 +3924,8 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
 
  #Liechtenstein
  LIE_johann_ii:0 "Johann II"
+ LIE_albert_schadler:0 "Albert Schädler"
+ LIE_fritz_walser:0 "Fritz Walser"
 
  #Andorra
  ADR_general_council:0 "General Council"
