--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -343,6 +343,8 @@
  before_the_leaves_fall:0 "Before the Leaves Fall"
  before_the_leaves_fall_flag:0 "The Great War has ended in less than a few weeks"
  before_the_leaves_fall_failed:0 "The Second Franco-German War has escalated into the Great War"
+ 
+ LIE_approach_switzerland:0 "Approach Switzerland"
 
  FRA_parliament_dissolved:0 "The parliament has been dissolved"
  FRA_1910_legislative_elections_done:0 "1910 legislative elections are done"
