--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -653,6 +653,11 @@
  has_italian_civil_war_tt:0 "Italy is at civil war"
  has_italian_civil_war_tt_NOT:0 "Italy is not at civil war"
  
+ #LIECHTENSTEIN
+ LIE_custom_union_with_austria:0 "Custom Union with Austria"
+ LIE_custom_union_with_switzerland:0 "Custom Union with Switzerland"
+ LIE_johann_ii_idea:0 "Johann II"
+
  #TURKEY
  TUR_economic_etatism:0 "Etatism"
  TUR_economic_etatism_desc:0 "It seems that foreign investments and liberal open market economy has only increased our foreign dependency. From now on, our empire needs to introduce strict means to control its economy."
