--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1868,8 +1868,9 @@
  MCO_democratic_party:0 "Monégasque Committee"
  
  LIE_neutrality_party:0 "House of Liechtenstein"
- LIE_democratic_party:0 "CSVP"
- LIE_democratic_party_long:0 "Christlich-Soziale Volkspartei"
+ LIE_democratic_party:0 "Unabhängig"
+ LIE_CSVP_party:0 "CSVP"
+ LIE_CSVP_party_long:0 "Christlich-Soziale Volkspartei"
  
  ADR_neutrality_party:0 "Consell General d'Andorra"
  ADR_democratic_party:0 "Consell General d'Andorra"
