--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -2196,6 +2196,14 @@ HOI4TGW_transandininan_railway:0 "Opening Of The TransAndinian Railway"
 ww1_chile.36.t:0 "Nationalist Protests!"
 ww1_chile.36.d:0 "fuckers from germany and england are holding protests in valparaiso of over 100k people, we must put and end to this,either by declaring our neutrality,or joining a side of the war, its really difficult tho, the government of [CHL.GetLeader] has held a security council meeting on the matters of the war, and they've recommended our government to stay neutral and take advantage of the war by selling saltpeter to the fighting sides, however, its clear how much our germophile army loves germany and the kaiser, and would obviously love to help them in the war "
 ww1_chile.36.a:0 "We'll See..."
+ww1_chile.37.t:0 "Our President Pedro Montt Montt Leaves for argentina"
+ww1_chile.37.d:0 "Our President Pedro Montt Montt Leaves for argentina, he'll be leaving for 11 days, leaving Ismael Tocornal In charge, we hope his health stays good and has a good time in their own century of independence celebrations"
+ww1_chile.37.a:0 "he aint gonna die...right?"
+
+ww1_chile.38.t:0 "Pedro Montt has returned"
+ww1_chile.38.d:0 "he's returned from argentina, hurray!"
+ww1_chile.38.a:0 "oh, bro... what a relief, he didnt die"
+
 
 
  # Colombia
