--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -1671,6 +1671,13 @@ FRA_french_local_investments_non_UEII:0 "Local Investements"
  ww1_USA.116.t:0 "Battle of Bud Bagsak"
 highly_qualified:0 "Highly Qualified"
 	pacifist:0 "Pacifist"
+ ww1_USA_wilson.22.t:0 "Dreams of the Pacifist"
+ ww1_USA_wilson.22.d:0 "William Jennings Bryan has had a long and rich history in American politics, as presidental nominee for the Democrat party several times in the last elections, although falling short every time. Wilson however, could never have won nomination in 1912 without William Jennings Bryans help, and thus it would be an appropriate token of gratitude to give this highly qualified man a position in the new cabinet.\n\nIn his political history William Jennings Bryan has always been noted for his fiercly anti imperalist views, and as Secretary of State, it is expected that Bryan will pursue new peace treaties with countries while reducing the United States interventions across the American hemisphere."
+ ww1_USA_wilson.22.a:0 "Lets hope he does as well as expected"
+bryaninform.tt:0 "William Jennings Bryan is a strong advisor, but he won't stay in Wilsons cabinet if his vision of pacifism is not followed. Avoid angering him through non neutral foreign diplomacy, or he will §Rresign§!"
+ww1_USA_wilson.21.t:0 "Close Call During Night Stroll"
+ww1_USA_wilson.21.d:0 "President Woodrow Wilson very well may of died last night if he was just a little less lucky last night. While out on a night walk with his physician, a man driving in a streat car almost ran over the President, being stopped by a brave officer who jumped in the middle forcing the car to quickly come to a stop, just a mere 10 feet away from Wilson and his physician.\n\nAfter a quick report, the police have quickly realized that the accident was indeed just that, an accident, and Wilson shook hands with the officer and driver before departing back to the white house. Either way, the event has made national news."
+ww1_USA_wilson.21.a:0 "Thank god for that officer."
 ww1_USA_wilson.20.t:0 "The Dominican Civil War"
 ww1_USA_wilson.20.d:0 "Tensions in Dominica have exploded as General Desiderio Arias has launched a rebellion against the current Dominican regime proming amongst other things, economic independence. This poses a threat to American sugar and banana companies there who could have their monopolies pushed out if the current government falls, thus we have great reason to intervene in the civil war and "restore order. It would, however, definitely not look great for us on the world stage, and would discredit our policy of peace across the American Hemisphere. Shall we give the American army orders to intervene?"
 ww1_USA_wilson.20.a:0 "Give the orders to restore peace!"
