more content for alt hist

--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -905,7 +905,7 @@
  TUR_af_army_morale_factor_yes:0 "£army_morale_texticon  Division Recovery Rate: [?TUR_af_army_morale_factor|+=1%]\n"
  TUR_af_stability_factor_yes:0 "£stability_texticon  Stability: [?TUR_af_stability_factor|=2%+]\n"
  TUR_af_planning_speed_yes:0 "£planning_speed_texticon  Planning Speed: [?TUR_af_planning_speed|+=1%]\n"
- TUR_af_max_planning_yes:0 "£planning_max_texticon  Max planning: [?TUR_af_command_power_gain_mult|+=1%]\n"
+ TUR_af_max_planning_yes:0 "£planning_max_texticon  Max planning: [?TUR_af_max_planning|+=1%]\n"
  TUR_af_command_power_gain_mult_yes:0 "£command_power_texticon  Daily Command Power Gain Multiplier: [?TUR_af_command_power_gain_mult|+=0%]\n"
  TUR_german_financial_investment:0 "[GER.GetAdjective] Financial Investment"
  TUR_german_financial_investment_desc:0 "Our recent talks with [GER.GetName] has resulted in a large financial investment by them."
