--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -435,3 +435,4 @@
  TUR_experienced_diplomat:0 "Experienced Diplomat"
  TUR_the_victorious:0 "The Victorious"
  TUR_the_victorious_tt:0 "  - Effects when more than §Y5%§! surrender progress:\nGets event '§YAhmed Muhtar Paşa Resigns§!'"
+ TUR_head_of_the_paramilitary:0 "Head of the Paramilitary"
