--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1886,12 +1886,18 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_not_itilafist_power_tt_decreased:0 "NOT: §Yİtilafist Officers§!' power is §YDecreased§!\n"
  TUR_not_itilafist_power_tt_minimal:0 "NOT: §Yİtilafist Officers§!' power is §YMinimal§!\n"
 
+ TUR_action_army_coup:0 "Action Army Coup"
+ TUR_action_army_coup_desc:0 "Annoyed by the government's current direction, a wing of the army known as the Hareket Ordusu (Action Army) are preparing a coup to replace the current government with a one that has a more positive outlook to the ittihadist agenda."
  TUR_saviour_officer_coup:0 "Saviour Officers Coup"
  TUR_saviour_officer_coup_desc:0 "Annoyed by the government's current direction, a group within the army known as the Halâskâr Zâbitân (Saviour Officers) are preparing a coup to replace the current government with a one that has a more positive outlook to the liberal agenda."
- TUR_liberal_retaliation:0 "Liberal Retaliation"
- TUR_liberal_retaliation_desc:0 "Though the recent İttihadist coup was a success, the liberals still maintain enough power to have a retaliation. Unless they're surpressed, they'll attempt to assasinate the current Grand Vizier"
  TUR_raid_on_the_sublime_porte:0 "Raid on the Sublime Porte"
  TUR_raid_on_the_sublime_porte_desc:0 "Annoyed by the government's current direction, officers within our army supporting the İttihadist cause are preparing a coup. Unless they're eradicated in time, they'll storm the Sublime Porte, and put a figure more sympathetic to their cause."
+ TUR_march_on_harbiye_nezareti:0 "March on Harbiye Nezâreti"
+ TUR_march_on_harbiye_nezareti_desc:0 "Annoyed by the government's current direction, officers within our army supporting the İtilafist cause are preparing a coup. Unless they're eradicated in time, they'll storm the Ministry of War, and put a figure more sympathetic to their cause."
+ TUR_nationalist_retaliation:0 "Natioalist Retaliation"
+ TUR_nationalist_retaliation_desc:0 "Though the recent İtilafist coup was a success, the nationalists still maintain enough power to have a retaliation. Unless they're surpressed, they'll attempt to assasinate the current Grand Vizier"
+ TUR_liberal_retaliation:0 "Liberal Retaliation"
+ TUR_liberal_retaliation_desc:0 "Though the recent İttihadist coup was a success, the liberals still maintain enough power to have a retaliation. Unless they're surpressed, they'll attempt to assasinate the current Grand Vizier."
  TUR_ittihadist_officers_raid_weapon_arsenal:0 "İttihadist Officers Raid Weapon Arsenal"
  TUR_ittihadist_officers_raid_weapon_arsenal_desc:0 "İttihadist officers are opposing our government by raiding weapon arsenals, strengthening themselves in the process."
  TUR_ittihadist_officers_blacmail_politicians:0 "İttihadist Officers Blackmail Politicians"
